--- a/sinusbot.html
+++ b/sinusbot.html
@@ -42,6 +42,7 @@
 	<div class="clear"></div>
 </div>
 
+<div id="audio-container" style="display: none"></div>
 
 <div id="login-screen">
 	<img src="https://forum.sinusbot.com/sinusbot-logo.png" />
