--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 			<div class="fav {{is_bookmarked this.id}}" data-id="{{this.id}}" title="Add to favourites"></div> 
 		</td>
 		<td>
-			<div class="switch" title="Play sound locally">
+			<div class="switch color green" title="Play sound locally">
 				<input type="checkbox" data-player="browser" data-idx="{{@index}}">
 				<label></label>
 			</div> 
 		</td>
 		<td>
-			<div class="switch" title="Play sound via sinusbot">
+			<div class="switch color red" title="Play sound via sinusbot">
 				<input type="checkbox" data-player="sinusbot" data-idx="{{@index}}">
 				<label></label>
 			</div> 
